# machine_learning_specialist_dio

./: .gitignore  LICENSE  README.md  pyproject.toml
desafio3/: codigo.py
